# mgsgbLz

./: LICENSE  README.md  mgsGbScript.txt  mgsgbLz.cabal  names.txt  stack.yaml  table.tbl
src/: Main.hs  RomhackLib.hs  Table.hs
