name:                mgsgbLz
version:             0.2.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/mgsgbLz#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mgsgbLz
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, bytestring, split, binary,
                          containers, stringsearch, unordered-containers,
                          parsec, ansi-terminal
  other-modules:       RomhackLib
  ghc-options:         -Wall
